<resources>
    <string name="app_name">DarkModeSample</string>
    <string name="button">Button</string>
    <string name="disable">Disable</string>
    <string name="material_button">Material Button</string>
    <string name="material_disable">Material Disable</string>
    <string name="edit_text">Edit Text</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
</resources>
